--- a/style.css
+++ b/style.css
@@ -27,6 +27,19 @@ body{
    height: 250px;
    background-color: rgb(152, 97, 168);
 }
+#oligarchBlock{
+   display: flex;
+   flex-wrap: wrap;
+}
+.oligarch{
+   margin: 20px;
+   padding: 10px;
+   border-radius: 5%;
+   border: 2px solid black;
+   width: 250px;
+   height: 250px;
+   background-color: rgb(228, 122, 80);
+}
 .imgDeputy{
    width: 100px;
    height: 100px;
